Installing CORS, added registration-routes and added MongoDB-examples to .env

--- a/backend/example.env
+++ b/backend/example.env
@@ -1,1 +1,6 @@
 PORT = 3000
+MONGODB_HOST = 'insert-host-name-here'
+MONGODB_PORT = 27017
+MONGODB_DB = 'insert-mongodb-database-here'
+MONGODB_USER = 'insert-mongodb-user-here'
+MONGODB_PASS = '????'
